src/css/apps/components/appinfo.css
#AppInfo {
  display: flex;
  flex-direction: column;
  /* overflow: visible; */
  height: fit-content !important;
}

#AppInfo > div.body {
  padding: 25px;
  display: flex;
  flex-direction: column;
  gap: 15px;
  flex-grow: 1;
  border-radius: 9px;
  overflow: hidden;
}
#AppInfo > div.body div.info-block div.segment.mode p.value,
#AppInfo > div.body div.info-block div.segment.version p.value {
  display: flex;
  align-items: center;
  gap: 5px;
}

#AppInfo > div.body div.info-block div.segment.mode p.value img,
#AppInfo > div.body div.info-block div.segment.version p.value img {
  height: 16px;
}

#AppInfo > div.body div.info-block div.controls button {
  margin: 0;
  padding: 0;
  background-color: transparent;
  font-size: 16px;
  outline: none;
}

#AppInfo > div.body div.info-block div.controls {
  height: 19px;
}
#AppInfo > div.body div.info-block div.controls button.disabled {
  opacity: 0.3;
}

#AppInfo div.header {
  display: flex;
  justify-content: space-between;
  gap: 10px;
}

#AppInfo div.header > div {
  display: flex;

  gap: 10px;
  align-items: center;
}

#AppInfo div.header div.left div.base-info,
#AppInfo div.header div.left {
  width: 0;
  flex-grow: 1;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

#AppInfo div.header div.left img {
  height: 64px;
  margin-right: 5px;
}

#AppInfo div.header div.left p.name {
  font-size: 22px;
  font-weight: bold;
  gap: 10px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

#AppInfo div.header div.left p.name img {
  height: 20px;
}

#AppInfo div.header div.left p.author {
  opacity: 0.5;
  margin: 0;
}

#AppInfo div.header div.right button {
  height: 32px;
  margin: 0;
}

#AppInfo div.header div.right button.disable {
  background-color: var(--clr-red-fg);
  color: var(--clr-red-bg);
  font-weight: bold;
}

#AppInfo div.header div.right button.disable.disabled {
  background-color: var(--clr-green-fg);
  color: var(--clr-green-bg);
}

#AppInfo div.header div.right button.lucide {
  padding: 0;
  width: 35px;
  font-size: 20px;
}
#AppInfo div.info-block.actions {
  margin-top: auto;
}

#AppInfo > div.body div.info-block.actions div.row {
  gap: 10px;
  padding-right: 10px;
}

#AppInfo div.info-block.actions div.row button {
  margin: 0;
}

#AppInfo div.info-block.actions div.row p.id {
  margin: 0;
  margin-right: auto;
  padding: 0 5px;
  opacity: 0.5;
  font-family: "Source Code Pro", monospace;
  line-height: 30px;
}

#AppInfo div.info-block.process-info div.row button.processes {
  margin-left: auto;
}

#AppInfo div.info-block.process-info div.row {
  padding-right: 10px;
}

#AppInfo div.info-block.internal-info {
  margin-bottom: 20px;
}

